small fix for uneven button height

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -518,6 +518,10 @@ img#start-image {
     margin: 10px;
 }
 
+.settings-buttons > a > button{
+    height: 100%;
+}
+
 .settings-slider-val {
     text-align: end;
 }
